# Netux

./: .gdbinit  .gitignore  Makefile  README  TODOLIST  build  build.sh  debug.sh  nasm  outline.txt  run.sh
nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml
rust/netux/: Cargo.toml  target.json
rust/netux/.cargo/: config.toml
rust/netux/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
src/: console.c  console.h  desctbl.c  desctbl.h  desctbl.s  inter.c  inter.h  inter.s  interrupt.s  irq.c  irq.h  isr.h  kernel.c  keyb.c  keyb.h  link.ld  loader.s  math.c  pci.c
src/devices/: ata.c  console.c  device.c  keyb.c  pci.c  rtl8139.c
src/include/: ata.h  console.h  desctbl.h  device.h  irq.h  keyb.h  math.h  mm.h  pci.h  rtl8139.h
src/init/: desctbl.c  desctbl.s  interrupt.s  irq.c  isr.c  mm.c  mm.s
src/loader/: loader.s
